--- a/src/index.html
+++ b/src/index.html
@@ -67,53 +67,12 @@
   </style>
 
   <!-- Primary Meta Tags -->
-  <title>Henry Heffernan - Portfolio 2022</title>
-  <meta name="title" content="Henry Heffernan - Software Engineer">
+  <title>Rizky Reynaldi - IT Specialist</title>
+  <meta name="title" content="Rizky Reynaldi - IT Specialist">
   <meta name="description"
-    content="I'm Henry, a Software Engineer based in NY. Rensselaer Polytechnic Institute Graduate with my B.S. in Computer Science, currently looking for a full time role.">
+    content="IT Specialist | Spesialis Custom Web, Aplikasi, Software, Machine Learning, dan Automation AI">
 
-  <!-- Open Graph / Facebook -->
-  <meta property="og:type" content="website">
-  <meta property="og:url" content="https://henryheffernan.com/">
-  <meta property="og:title" content="Henry Heffernan - Software Engineer">
-  <meta property="og:description"
-    content="I'm Henry, a Software Engineer based in NY. Rensselaer Polytechnic Institute Graduate with my B.S. in Computer Science, currently looking for a full time role.">
-
-  <!-- Twitter -->
-
-
-  <meta property="twitter:card" content="summary_large_image">
-  <meta name="twitter:card" content="summary_large_image">
-
-  <meta property="twitter:url" content="https://henryheffernan.com/">
-  <meta name="twitter:url" content="https://henryheffernan.com/">
-
-  <meta property="twitter:title" content="Henry Heffernan - Software Engineer">
-  <meta name="twitter:title" content="Henry Heffernan - Software Engineer">
-
-  <meta property="twitter:description"
-    content="I'm Henry, a Software Engineer based in NY. Rensselaer Polytechnic Institute Graduate with my B.S. in Computer Science, currently looking for a full time role.">
-  <meta name="twitter:description"
-    content="I'm Henry, a Software Engineer based in NY. Rensselaer Polytechnic Institute Graduate with my B.S. in Computer Science, currently looking for a full time role.">
-
-  <meta property="twitter:image" content="https://henryheffernan.com/images/preview-new.jpg">
-  <meta name="twitter:image" content="https://henryheffernan.com/images/preview-new.jpg">
-
-  <!-- Images -->
-  <meta property="og:image" content="https://henryheffernan.com/images/preview-new.jpg">
-  <meta property="og:image:secure" content="https://henryheffernan.com/images/preview-new.jpg">
-
-  <link rel="shortcut icon" href="../static/images/favicon.ico" type="image/x-icon">
-
-  <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-4FJBF6WF60"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag() { dataLayer.push(arguments); }
-    gtag('js', new Date());
-
-    gtag('config', 'G-4FJBF6WF60');
-  </script>
+  
 </head>
 
 <body>
